{{$NEXT}}

0.8.0     2011-03-14 23:08:46 Europe/Rome

0.7.0_03  2011-03-11 08:41:21 Europe/Rome
   - better documentation, covered all options

0.7.0_02  2011-03-11 02:19:19 Europe/Rome
   - added dependency upon Dancer

0.7.0_01  2011-03-11 01:57:11 Europe/Rome
   - initial developer release